--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.4",
     "tachyons": "^4.11.1"
   },
   "scripts": {
