--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,31 @@
-  version: 2.1
-  jobs:
-    build:
-      docker: 
-        - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
-      steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
+version: 2
+jobs:
+   build:
+     docker:
+       - image: circleci/node:8.9
+     steps:
+       - checkout
+       - run: npm install
+       - run: CI=true npm run build
+   test:
+     docker:
+       - image: circleci/node:8.9
+     steps:
+       - checkout
+       - run: npm install
+       - run: npm run test
+   hithere:
+     docker:
+       - image: circleci/node:8.9
+     steps:
+       - checkout
+       - run: echo "Hellloooo!"
+workflows:
+  version: 2
+  build-test-and-lint:
+    jobs:
+      - build
+      - hithere
+      - test:
+          requires:
+            - hithere
